--- a/makeSynthDataFromNLDAS.ipynb
+++ b/makeSynthDataFromNLDAS.ipynb
@@ -643,7 +643,7 @@
     "plt.figure(figsize=(20,10))\n",
     "plt.plot(synthData['prcpmmday'], label='synthetic', linewidth=0.2)\n",
     "plt.plot(dataF['prcpmmday'], label='nldas', linewidth=0.2)\n",
-    "plt.title('temperature maximum', fontsize=24)\n",
+    "plt.title('precipitation maximum', fontsize=24)\n",
     "plt.show()"
    ]
   },
@@ -691,7 +691,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
