convert/make files

--- a/convert_NLDAS_to_NetCDF.ipynb
+++ b/convert_NLDAS_to_NetCDF.ipynb
@@ -4974,8 +4974,10 @@
     }
    ],
    "source": [
-    "for b in attributes.index.values:\n",
-    "    NLDAS_TXT_TO_NETCDF(b)"
+    "make_net_cdf_files = False\n",
+    "if make_net_cdf_files:\n",
+    "    for b in attributes.index.values:\n",
+    "        NLDAS_TXT_TO_NETCDF(b)"
    ]
   }
  ],
