make confic/domain/state files

--- a/make_configure_files.ipynb
+++ b/make_configure_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +73,8 @@
     "        cf.write(\"\\n\")\n",
     "\n",
     "        cf.write('forcing = ./nldas_forcing_nc/' + basin_id_str + \"_forcing.nc\\n\")\n",
-    "        cf.write('domain = ./nldas_domain_nc/' + basin_id_str + \"_domain.nc\\n\")\n",
-    "        cf.write('state = ./nldas_state_nc/' + basin_id_str + \"_state.nc\\n\")\n",
+    "        cf.write(\"domain = ./input/domain_CONUS_MX.nc\\n\")\n",
+    "        cf.write('state = ./state_files/' + basin_id_str + \"_state.nc\\n\")\n",
     "\n",
     "        cf.write(\"\\n\")\n",
     "\n",
@@ -114,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
