--- a/make_domain_files.ipynb
+++ b/make_domain_files.ipynb
@@ -27,7 +27,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Modified on Fri June 5 2020\n",
+    "Modified on Fri June 9 2020\n",
     "@author: Jonathan Frame\n",
     "\"\"\""
    ]
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "import datetime as dt\n",
-    "import geopandas as gpd\n",
+    "import geopandas as gpd \n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import xarray as xr\n",
@@ -3559,50 +3559,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['elev', 'mask', 'area', 'frac', 'lon', 'lat', 'month', 'dur', 't_pk'])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "for b in attributes.index.values:\n",
-    "    airSubset = f.variables['air'][ : , latli:latui , lonli:lonui ] "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def MAKE_DOMAIN_FILES(basinID, data_averages, domain_all, domain_lat_lons):\n",
+    "def MAKE_DOMAIN_FILES(basinID, domain_all, domain_lat_lons):\n",
     "    basin_id_int = int(basinID)\n",
     "    basin_id_str = \"{:08}\".format(basin_id_int)\n",
     "    latCatchment , lonCatchment = GET_LAT_LON_FROM_ATTRIBUTES(attributes, basin_id_int)\n",
     "\n",
     "    # Extract the data for the specific basin\n",
-    "    domain_prec = domain_all.variables['prec'][ : , domain_lat_lons[b][0] , domain_lat_lons[b][1] ] \n",
-    "    elev\n",
-    "    mask\n",
-    "    area\n",
-    "    frac\n",
-    "    month\n",
-    "    dur(month,lat,lon)\n",
-    "    t_pk(month,lat,lon)\n",
-    "    \n",
+    "    domain_prec = domain_all.variables['prec'][ : , domain_lat_lons[b][0] , domain_lat_lons[b][1] ]\n",
+    "    elev = domain_all.variables['elev'][ domain_lat_lons[b][0] , domain_lat_lons[b][1] ]\n",
+    "    mask = domain_all.variables['mask'][ domain_lat_lons[b][0] , domain_lat_lons[b][1] ]\n",
+    "    area = domain_all.variables['area'][ domain_lat_lons[b][0] , domain_lat_lons[b][1] ]\n",
+    "    frac = domain_all.variables['frac'][ domain_lat_lons[b][0] , domain_lat_lons[b][1] ]\n",
+    "    month = domain_all.variables['month']\n",
+    "    dur = domain_all.variables['dur'][ : , domain_lat_lons[b][0] , domain_lat_lons[b][1] ]\n",
+    "    t_pk = domain_all.variables['t_pk'][ : , domain_lat_lons[b][0] , domain_lat_lons[b][1] ]\n",
+    "\n",
     "    #BEGIN #######################################################################\n",
     "    #BEGIN #  WRITE DATA TO THE NETCDF state DATA FILE   #######################\n",
     "    #BEGIN #######################################################################\n",
-    "\n",
+    "    \n",
     "    domainDataName = domain_dir + basin_id_str + '_domain.nc'\n",
     "    domain = nc.Dataset(domainDataName, 'w', format='NETCDF4_CLASSIC')\n",
     "    domain.title = basin_id_str +' _domain'\n",
@@ -3610,47 +3589,56 @@
     "\n",
     "    domain.createDimension('lat', 1)\n",
     "    domain.createDimension('lon', 1)\n",
-    "    domain.createDimension('time', size=None)\n",
+    "    domain.createDimension('month', size=12)\n",
     "\n",
-    "    ### createVareables in new data set\n",
-    "    state.createVariable('Prec', np.int32, ('time',))\n",
-    "    state.variables['Prec'].units = 'mm'\n",
-    "    state.variables['Prec'].long_name = 'Precipitation'\n",
-    "    #state.variables['Prec'].v_type = 'scalarv'\n",
-    "    state.variables['Prec'][:] = np.array(data_averages['PRCP(mm/day)'])\n",
+    "    domain.createVariable('month')\n",
+    "    domain.variables['month'][:] = np.arrray([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11])\n",
     "\n",
-    "    state.createVariable('Tmax', np.float32, ('time',))\n",
-    "    state.variables['Tmax'].units = 'C' \n",
-    "    state.variables['Tmax'].longname = \"Daily maximum temperature\"\n",
-    "    #state.variables['Tmax'].v_type = 'scalarv'\n",
-    "    state.variables['Tmax'][:] = np.array(data_averages['Tmax(C)'])\n",
-    "    \n",
-    "    state.createVariable('Tmin', np.float32, ('time',))\n",
-    "    state.variables['Tmin'].units = 'C'\n",
-    "    state.variables['Tmin'].longname = \"Daily minimum temperature\"\n",
-    "    #state.variables['Tmin'].v_type = 'scalarv'\n",
-    "    state.variables['Tmin'][:] = np.array(data_averages['Tmin(C)'])\n",
-    "    \n",
-    "    state.createVariable('latitude', np.float32, ('lat',))\n",
-    "    state.variables['latitude'].units = 'degrees_north'\n",
-    "    state.variables['latitude'].long_name = 'latitude'\n",
-    "    state.variables['latitude'].axis = 'Y'\n",
-    "    state.variables['latitude'][:] = latCatchment\n",
+    "    domain.createVariable('dur', np.float32, ('month','lat','lon'))\n",
+    "    domain.variables['dur']_FillValue = -9999\n",
+    "    domain.variables['dur'].longname = \"Precipitation duration (minutes)\"\n",
+    "    domain.variables['dur'][:] = dur\n",
     "\n",
-    "    state.createVariable('longitude', np.float32, ('lon',))\n",
-    "    state.variables['longitude'].units = 'degrees-east'\n",
-    "    state.variables['longitude'].long_name = 'longitude'\n",
-    "    state.variables['longitude'].axis = 'X'\n",
-    "    state.variables['longitude'][:] = lonCatchment\n",
+    "    domain.createVariable('t_pk', np.float32, ('month','lat','lon'))\n",
+    "    domain.variables['t_pk']_FillValue = -9999\n",
+    "    domain.variables['t_pk'].longname = \"Time of peak precipitation intensity (minutes since beginning of day)\"\n",
+    "    domain.variables['t_pk'][:] = t_pk\n",
     "\n",
-    "    state.createVariable('time', np.float64, ('time',))\n",
-    "    state.variables['time'].units = 'hours since 2000-01-01 00:00:00'\n",
-    "    state.variables['time'].long_name = \"local time at grid location\"\n",
-    "    state.variables['time'].calendar = 'standard'\n",
-    "    state.variables['time'][:] = nc.date2num(state_time, \n",
-    "                    units='hours since 2000-01-01 00:00', calendar='standard')\n",
-    "    \n",
-    "    state.close()"
+    "    domain.createVariable('elev', np.int32, ('lat','lon'))\n",
+    "    domain.variables['elev']._FillValue = NaN\n",
+    "    domain.variables['elev'].units = 'm'\n",
+    "    domain.variables['elev'].long_name = 'gridcell_elevation'\n",
+    "    domain.variables['elev'][:] = elev\n",
+    "\n",
+    "    domain.createVariable('area', np.float32, ('lat','lon'))\n",
+    "    domain.variables['area']._FillValue = NaN\n",
+    "    domain.variables['area'].units = 'm2'\n",
+    "    domain.variables['area'].long_name = 'area of grid cell'\n",
+    "    domain.variables['area'][:] = area\n",
+    "    domain.createVariable('mask', np.int32, ('lat','lon'))\n",
+    "    domain.variables['mask'].long_name = \"domain mask\" ;\n",
+    "    domain.variables['mask'].comment = \"0 indicates cell is not active\"\n",
+    "\n",
+    "    domain.createVariable('frac', np.float32, ('lat','lon'))\n",
+    "    domain.variables['frac'].units = '1'\n",
+    "    domain.variables['frac'].longname = \"fraction of grid cell that is active\"\n",
+    "    domain.variables['frac'][:] = frac\n",
+    "\n",
+    "    domain.createVariable('latitude', np.float32, ('lat',))\n",
+    "    domain.variables['latitude']._FillValue = NaN\n",
+    "    domain.variables['latitude'].units = 'degrees_north'\n",
+    "    domain.variables['latitude'].long_name = 'latitude'\n",
+    "    domain.variables['latitude'].axis = 'Y'\n",
+    "    domain.variables['latitude'][:] = latCatchment\n",
+    "\n",
+    "    domain.createVariable('longitude', np.float32, ('lon',))\n",
+    "    domain.variables['longitude']._FillValue = NaN\n",
+    "    domain.variables['longitude'].units = 'degrees-east'\n",
+    "    domain.variables['longitude'].long_name = 'longitude'\n",
+    "    domain.variables['longitude'].axis = 'X'\n",
+    "    domain.variables['longitude'][:] = lonCatchment\n",
+    "\n",
+    "    domain.close()"
    ]
   },
   {
@@ -3659,11 +3647,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "make_state_files = True\n",
-    "if make_state_files:\n",
+    "make_domain_files = True\n",
+    "if make_domain_files:\n",
     "    for b in attributes.index.values:\n",
-    "        data_averages = SUMMARIZE_STATE_DATA(b)\n",
-    "        MAKE_STATE_FILES(b, data_averages)"
+    "        MAKE_DOMAIN_FILES(basinID, domain_all, domain_lat_lons)"
    ]
   }
  ],
