--- a/make_state_files.ipynb
+++ b/make_state_files.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This script is meant to convert the NLDAS data into NetCDF format\n",
-    "# This will be used by the MetSim algorithm to create the radiation/vapor pressure"
+    "# This script is meant to make state files for MetSim\n",
+    "# Averaging every day of the year to be used as the proceeding climatology"
    ]
   },
   {
@@ -28,7 +28,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Modified on Fri June 5 2020\n",
+    "Modified on Fri June 8 2020\n",
     "@author: Jonathan Frame\n",
     "\"\"\""
    ]
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,18 +168,18 @@
     "    state.createDimension('time', size=366)\n",
     "\n",
     "    ### createVareables in new data set\n",
-    "    state.createVariable('Prec', np.int32, ('time',))\n",
+    "    state.createVariable('Prec', np.float32, ('time',))\n",
     "    state.variables['Prec'].units = 'mm'\n",
     "    state.variables['Prec'].long_name = 'Precipitation'\n",
     "    #state.variables['Prec'].v_type = 'scalarv'\n",
     "    state.variables['Prec'][:] = np.array(data_averages['PRCP(mm/day)'])\n",
     "\n",
     "    state.createVariable('Tmax', np.float32, ('time',))\n",
-    "    state.variables['Tmax'].units = 'C' \n",
+    "    state.variables['Tmax'].units = 'C'\n",
     "    state.variables['Tmax'].longname = \"Daily maximum temperature\"\n",
     "    #state.variables['Tmax'].v_type = 'scalarv'\n",
     "    state.variables['Tmax'][:] = np.array(data_averages['Tmax(C)'])\n",
-    "    \n",
+    "\n",
     "    state.createVariable('Tmin', np.float32, ('time',))\n",
     "    state.variables['Tmin'].units = 'C'\n",
     "    state.variables['Tmin'].longname = \"Daily minimum temperature\"\n",
@@ -202,15 +202,15 @@
     "    state.variables['time'].units = 'hours since 2000-01-01 00:00:00'\n",
     "    state.variables['time'].long_name = \"local time at grid location\"\n",
     "    state.variables['time'].calendar = 'standard'\n",
-    "    state.variables['time'][:] = nc.date2num(state_time, \n",
+    "    state.variables['time'][:] = nc.date2num(state_time,\n",
     "                                          units='hours since 2000-01-01 00:00', calendar='standard')\n",
-    "    \n",
+    "\n",
     "    state.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
